[project]
name = "algorithms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "veselev.aleks@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.13",
]
viz = [
    "matplotlib>=3.9.0",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
